Fixed layout issue with draftelock
I changed the number of columns, and forgot to change draftlock to using
the less mixins and computing the width for columns, so it was weird.
Fixed now :-)

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -326,12 +326,33 @@ td, th, .ff-fix {
 
 
 /*------------------------------------*\
+    $PKMNMAIN
+\*------------------------------------*/
+.controls{
+  .make-sm-column(@grid-columns / 3);
+}
+
+.card-pack, .intro{
+  .make-sm-column(@grid-columns / 1.8);
+}
+
+
+
+
+
+
+
+
+
+/*------------------------------------*\
     $PKMNCARDS
 \*------------------------------------*/
 .row form{
   margin-left: 5px;
 }
 .card{
+  .make-xs-column(@grid-columns / 2);
+  .make-md-column(@grid-columns / 3);
   float: left;
   padding: 5px;
   
